objects/Esquadrias__c.object
<CustomObject>
    <label>Esquadria</label>
    <nameField>
        <displayFormat>ESQ-{0000}</displayFormat>
        <label>Esquadrias</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Esquadrias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Janela</fullName>
                </value>
                <value>
                    <fullName>Porta</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Altura__c</fullName>
        <label>Altura</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Largura__c</fullName>
        <label>Largura</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ambiente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ambiente</label>
        <referenceTo>Ambiente__c</referenceTo>
        <relationshipLabel>Esquadrias</relationshipLabel>
        <relationshipName>Esquadrias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AreaIluminacao__c</fullName>
        <label>Área de iluminação</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AreaVentilacao__c</fullName>
        <label>Área de ventilação</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InstaladaFachada__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Instalada na fachada?</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
</CustomObject>